sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: Unmatched closing brace '}' ignored here
    }
    ^AlgBubbleSort1:7: error: eof expected but '}' found.
  }
  ^